openshift/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banking-demo
  labels:
    app.kubernetes.io/part-of: mini-banking-dash
